Updated processing scripts and readme

--- a/1_Download_tiff.ipynb
+++ b/1_Download_tiff.ipynb
@@ -48,7 +48,7 @@
     "    variables: List[str]\n",
     "\n",
     "SETTINGS = DownloadSettings(\n",
-    "    folder='E:/Elbe/Elbe_Input/Future_data/',\n",
+    "    folder= r\"D:\\Global_Historical_climate_data\\WorldClim_v1\\Future_data_rasters\",\n",
     "    chunk_size=32 * 1024 * 1024,\n",
     "    max_workers=4,\n",
     "    models=[\n",
