Updated processing scripts and readme

--- a/2_Extraction_csv_from_tiff.ipynb
+++ b/2_Extraction_csv_from_tiff.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "input_folder = r\"D:\\Global_Historical_climate_data\\WorldClim_v1\\Future_data_rasters\"\n",
     "output_folder = r\"D:\\Global_Historical_climate_data\\WorldClim_v1\\Extracted_CSV_from_rasters\"\n",
-    "station_file = r\"E:\\Elbe\\Models\\Vector_output\\Climate_stations_per_subbasian.csv\"\n",
+    "station_file = r\"E:\\Climate_stations_per_subbasian.csv\"\n",
     "log_file = os.path.join(output_folder, \"extraction_log.txt\")\n",
     "missing_log = os.path.join(output_folder, \"missing_band_values.txt\")\n",
     "\n",
